Update for winter 2018

--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -37,17 +37,17 @@
   <div class="content">
       <h2>授業</h2>
   
-  <h3>今学期（2017年春学期）の授業</h3>
+  <h3>今学期（2018年冬学期）の授業</h3>
    <ul>
-    <li><a href="/teaching/methodology/">Research Methodology</a></li>
-    <li><a href="/teaching/lgps/">Local Government and Public Services</a></li>
-    <!-- <li><a href="/teachin/stata/" target="_blank">Data Visualization and Statistics with Stata (and R)</a> [special lectures for JDS students]</li> -->
+       <li><a href="/teaching/pubadmin/">Public Administration</a></li>
+       <!-- <li><a href="/teachin/stata/" target="_blank">Data Visualization and Statistics with Stata (and R)</a> [special lectures for JDS students]</li> -->
   </ul>
   
   <h3>過去の授業</h3>
   <h4>国際大学 (IUJ)</h4>
   <ul>
-    <li><a href="/teaching/pubadmin/">Public Administration</a></li>
+    <li><a href="/teaching/methodology/">Research Methodology</a></li>
+    <li><a href="/teaching/lgps/">Local Government and Public Services</a></li>
   </ul>
   <h4>他大学</h4>
   <ul>
