--- a/teaching/index.html
+++ b/teaching/index.html
@@ -37,13 +37,13 @@
   
   <h3>Current (Fall 2017)</h3>
   <ul>
-    <li><a href="lgps/" target="_blank">Local Government and Public Services</a></li>
+    <li><a href="pubadmin/" target="_blank">Public Administration</a></li>
     <!-- <li><a href="stata/" target="_blank">Data Visualization and Statistics with Stata (and R)</a> [special lectures for JDS students]</li> -->
   </ul>
   <h3>Past</h3>
   <h4>IUJ</h4>
   <ul>
-    <li><a href="pubadmin/" target="_blank">Public Administration</a> (Winter 2017)</li>
+    <li><a href="lgps/" target="_blank">Local Government and Public Services</a> (Spring &amp; Fall 2017)</li>
     <li><a href="methodology/" target="_blank">Research Methodology</a> (Spring 2017)</li>
     <li>Local Government and Public Services (Spring 2017)</li>
     <li>Data Visualization and Statistics with Stata: Special lectures for JDS students (Winter 2017)</li>
