--- a/teaching/pubadmin/index.html
+++ b/teaching/pubadmin/index.html
@@ -34,10 +34,10 @@
 
   <h2>Public Administration (DCC5360)</h2>
   
-    <p>Graduate School of International Relations, International University of Japan, Winter 2017</p>
+    <p>Graduate School of International Relations, International University of Japan, Winter 2018</p>
   <br>
 
-  <h4><a class="black" href="docs/syllabus-PubAdmin-2017winter.pdf">Syllabus (revised on 2017-01-18)</a></h4>
+  <h4><a class="black" href="docs/syllabus-PubAdmin-2018winter.pdf">Syllabus</a></h4>
      <br>
   
   <h3>Overview and Class Goals</h3>
