annual update & update new courses at KUT

--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -37,20 +37,20 @@
   <div class="content">
       <h2>授業</h2>
   
-  <h3>今学期（2018年冬学期）の授業</h3>
+  <h3>今学期（2018年度 第1クォータ）の授業</h3>
    <ul>
-       <li><a href="/teaching/pubadmin/">Public Administration</a></li>
-       <!-- <li><a href="/teachin/stata/" target="_blank">Data Visualization and Statistics with Stata (and R)</a> [special lectures for JDS students]</li> -->
-  </ul>
-  
+     <li><a href="stat2/" target="_blank">統計学 2</a></li>
+     <li><a href="econometrics2/" target="_blank">計量経済学応用</a></li>
+   </ul>
+  <!--
   <h3>過去の授業</h3>
-  <h4>国際大学 (IUJ)</h4>
-  <ul>
-    <li><a href="/teaching/methodology/">Research Methodology</a></li>
-    <li><a href="/teaching/lgps/">Local Government and Public Services</a></li>
+  -->
   </ul>
   <h4>他大学</h4>
   <ul>
+    <li><a href="/teaching/pubadmin/">Public Administration</a> [2017年冬学期, 2018年冬学期, 国際大学国際関係学研究科]</li>
+    <li><a href="/teaching/methodology/">Research Methodology</a> [2017年春学期, 国際大学国際関係学研究科]</li>
+    <li><a href="/teaching/lgps/">Local Government and Public Services</a> [2017年春学期, 秋学期, 国際大学国際関係学研究科]</li>
     <li><a href="rm1/">政治学方法論 I</a> [2014年度後期, 2016年度前期, 神戸大学 法学部 / 法学研究科] </li>
     <li><a href="/teaching/rm1/">Research Methods in Political Science I</a> [2015年度後期, 神戸大学 法学部 / 法学研究科] </li>
     <li><a href="rm2/">政治学方法論 II</a> [2015年度前期, 神戸大学 法学部 / 法学研究科] </li>
@@ -73,16 +73,16 @@
   <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;949-7277 新潟県南魚沼市国際町777</td>
+      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://iuj.ac.jp/jp/" target="_blank">国際大学</a> <a class="white-white" href="http://iuj.ac.jp/jp/graduate/gsir/" target="_blank">国際関係学研究科</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
-      <td align="right"> &copy; 2014-2017 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
+      <td align="right"> &copy; 2014-2018 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
   <!-- end .footer --> </div>
