--- a/teaching/index.html
+++ b/teaching/index.html
@@ -37,20 +37,20 @@
   
   <h3>Current (Fall 2017)</h3>
   <ul>
-    <li><a href="pubadmin/" target="_blank">Public Administration</a></li>
-    <!-- <li><a href="stata/" target="_blank">Data Visualization and Statistics with Stata (and R)</a> [special lectures for JDS students]</li> -->
+    <li><a href="/jp/classes/stat2/" target="_blank">Statistics 2 (in Japanese)</a></li>
+    <li><a href="/jp/clasees/ecnometrics2/" target="_blank">Applied Econometrics (in Japanese)</a></li>
   </ul>
-  <h3>Past</h3>
-  <h4>IUJ</h4>
-  <ul>
-    <li><a href="lgps/" target="_blank">Local Government and Public Services</a> (Spring &amp; Fall 2017)</li>
-    <li><a href="methodology/" target="_blank">Research Methodology</a> (Spring 2017)</li>
-    <li>Local Government and Public Services (Spring 2017)</li>
-    <li>Data Visualization and Statistics with Stata: Special lectures for JDS students (Winter 2017)</li>
-  </ul>
+  <!-- <h3>Past</h3>
+  <h4>Kochi University of Technology</h4>
+  -->
   <h4>Other Universities</h4>
   <ul>
-    <!--<li>Comparative Politics A &amp; B, Kobe University (Summer 2017)</li> -->
+    <li><a href="pubadmin/" target="_blank">Public Administration</a> (g), International Univeristy of Japan (Winter 2017 &amp; 2018)</li>
+    <li><a href="lgps/" target="_blank">Local Government and Public Services</a> (g), International Univeristy of Japan (Spring &amp; Fall 2017)</li>
+    <li><a href="methodology/" target="_blank">Research Methodology</a> (g), International Univeristy of Japan (Spring 2017)</li>
+    <li>Local Government and Public Services (g), International Univeristy of Japan (Spring 2017)</li>
+    <li>Data Visualization and Statistics with Stata (g), International Univeristy of Japan (Winter 2017 &amp; 2018)</li>
+    <li>Comparative Politics A &amp; B (u), Kobe University (Summer 2017)</li>
     <li><a href="/jp/classes/pe/" target="_blank">Basics of Political Economy</a> (u &amp; g), Kobe University (Fall 2016)</li>
     <li><a href="/jp/classes/pe1/" target="_blank">Political Economy I</a> (u &amp; g), Kobe University (Fall 2014, Fall 2015) </li>
     <li><a href="/jp/classes/pe2/" target="_blank">Political Economy II</a> (u &amp; g), Kobe University (Spring 2015)</li>
@@ -70,21 +70,20 @@
   <!-- end .content -->
   </div>
   <!-- InstanceEndEditable -->
-  <div class="footer">
+ <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.iuj.ac.jp/gsir/" target="_blank">Graduate School of International Relations</a>, <a class="white-white" href="http://www.iuj.ac.jp/" target="_blank">International Unversity of Japan</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;777 Kokusai-cho, Minami-Uonuma, Niigata 949-7277, JAPAN</td>
+      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
-      <td align="right"> &copy; 2014-2017 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
+      <td align="right"> &copy; 2014-2018 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
   </table>
   <!-- end .footer --></div>
-
 <!-- end .container --></div>
 </body>
 <!-- InstanceEnd --></html>
