--- a/cv/index.html
+++ b/cv/index.html
@@ -41,11 +41,12 @@
  
   <h3>Current Position</h3>
   <ul>
-    <li>Assistant Professor, Graduate School of International Relations, <a href="https://www.iuj.ac.jp" target="_blank">International University of Japan</a> (Sep 2016 - present)</li>  
+    <li>Assistant Professor, School of Economics &amp; Management, <a href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a> (Apr 2018 - present)</li>  
   </ul>
  
   <h3>Previous Positions</h3>
   <ul>
+    <li>Assistant Professor, Graduate School of International Relations, International University of Japan (Sep 2016 - Mar 2018)</li>
     <li>Assistant Professor, Graduate School of Law, Kobe University (July 2014 - Aug 2016)</li>
     <li>Adjunct Lecturer, School of Political Science and Economics, Waseda University (Apr 2014 - Sep 2014)</li>
     <li>Adjunct Researcher, Faculty of Political Science and Economics, Waseda University (Apr 2013 - June 2014)</li>
@@ -79,17 +80,17 @@
   <!-- end .content -->
   </div>
   <!-- InstanceEndEditable -->
-  <div class="footer">
+ <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.iuj.ac.jp/gsir/" target="_blank">Graduate School of International Relations</a>, <a class="white-white" href="http://www.iuj.ac.jp/" target="_blank">International Unversity of Japan</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;777 Kokusai-cho, Minami-Uonuma, Niigata 949-7277, JAPAN</td>
+      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
-      <td align="right"> &copy; 2014-2017 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
+      <td align="right"> &copy; 2014-2018 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
   </table>
   <!-- end .footer --></div>
