--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="content">
       <h2>Welcome to YUKI YANAI's Website</h2>
       <p>
-      I am an assistant professor in the Graduate School of International Relations at the <a href="https://www.iuj.ac.jp" target="_blank">International University of Japan</a>. I earned my Ph.D. in political science from the <a href="http://www.ucla.edu" target="_blank">University of California, Los Angeles (UCLA)</a>. My research interests lie primarily in the areas of comparative political economy and comparative political institutions. My current research investigates the relationships between political behavior and economic inequality in advanced industrial nations.  Another research focus is to analyze the effects of bicameralism on lawmaking in parliamentary democrarcies.
+      I am an assistant professor in the School of Economics &amp; Management at <a href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a>. I earned my Ph.D. in political science from the <a href="http://www.ucla.edu" target="_blank">University of California, Los Angeles (UCLA)</a>. My research interests lie primarily in the areas of comparative political economy and comparative political institutions. My current research investigates the relationships between political behavior and economic inequality in advanced industrial nations.  Another research focus is to analyze the effects of bicameralism on lawmaking in parliamentary democrarcies.
       </p>
    <p>
    </p>
@@ -46,14 +46,14 @@
   <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.iuj.ac.jp/gsir/" target="_blank">Graduate School of International Relations</a>, <a class="white-white" href="http://www.iuj.ac.jp/" target="_blank">International Unversity of Japan</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;777 Kokusai-cho, Minami-Uonuma, Niigata 949-7277, JAPAN</td>
+      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
-      <td align="right"> &copy; 2014-2017 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
+      <td align="right"> &copy; 2014-2018 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
   </table>
   <!-- end .footer --></div>
