--- a/jp/classes/rm1_2014/index.html
+++ b/jp/classes/rm1_2014/index.html
@@ -72,19 +72,18 @@
   <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;657-8501 神戸市灘区六甲台町2−1</td>
+      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.kobe-u.ac.jp/" target="_blank">神戸大学</a>大学院<a class="white-white" href="http://www.law.kobe-u.ac.jp/" target="_blank">法学研究科</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] lion.kobe-u.ac.jp</td>
-      <td align="right"> &copy; 2014-2015 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
+      <td align="right"> &copy; 2014-2018 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
+  <!-- end .footer --> </div><!-- end .container --></div>
 </body>
 <!-- InstanceEnd --></html>
