--- a/jp/index.html
+++ b/jp/index.html
@@ -37,7 +37,7 @@
   <div class="content">
   <h2>矢内 勇生（やない ゆうき）</h2>
   <h3>政治学博士 (Ph.D. in Political Science)</h3>
-  <h3><a href="https://www.iuj.ac.jp" target="_blank">国際大学</a>大学院 国際関係学研究科 講師</h3>
+  <h3><a href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> 経済・マネジメント学群 講師</h3>
   
   <h4>専門</h4>
   <p>&nbsp;&nbsp;比較政治学<br>
@@ -61,16 +61,16 @@
   <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;949-7277 新潟県南魚沼市国際町777</td>
+      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://iuj.ac.jp/jp/" target="_blank">国際大学</a> <a class="white-white" href="http://iuj.ac.jp/jp/graduate/gsir/" target="_blank">国際関係学研究科</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
-      <td align="right"> &copy; 2014-2017 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
+      <td align="right"> &copy; 2014-2018 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
   <!-- end .footer --> </div>
