--- a/research/abstracts/governance-with-a-twist.html
+++ b/research/abstracts/governance-with-a-twist.html
@@ -50,20 +50,20 @@ Pekkanen, Robert, Steven R. Reed, and Ethan Scheiner (eds.) 2013. <a class="book
   <!-- end .content -->
   </div>
   <!-- InstanceEndEditable -->
-  <div class="footer">
+ <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.iuj.ac.jp/gsir/" target="_blank">Graduate School of International Relations</a>, <a class="white-white" href="http://www.iuj.ac.jp/" target="_blank">International Unversity of Japan</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;777 Kokusai-cho, Minami-Uonuma, Niigata 949-7277, JAPAN</td>
+      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
-      <td align="right"> &copy; 2014-2017 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
+      <td align="right"> &copy; 2014-2018 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
   </table>
   <!-- end .footer --></div>
-<!-- end .container --></div>
+  <!-- end .container --></div>
 </body>
 <!-- InstanceEnd --></html>
