update econometrics2 and stat2

--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -46,6 +46,7 @@
     
     <h3>1. イントロダクション</h3>
       <ul>
+      <li><a href="slides/applied-econometrics-slides-01.pdf">講義スライド</a><li>
       <li><a href="../../stat2/contents/R/installing-R.html" target="_blank">R とRStudio のインストール</a></li>
   	  <li><a href="../../stat2/contents/R/introduction-to-R.html" target="_blank">R入門</a></li>
   	  <li>（<a href="../../stat2/contents/" target="_blank">統計学2のページ</a>を参照）</li>
