--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -39,8 +39,8 @@
   
   <h3>今学期（2018年度 第1クォータ）の授業</h3>
    <ul>
-     <li><a href="stat2/" target="_blank">統計学 2</a></li>
-     <li><a href="econometrics2/" target="_blank">計量経済学応用</a></li>
+     <li><a href="stat2/">統計学 2</a></li>
+     <li><a href="econometrics2/">計量経済学応用</a></li>
    </ul>
   <!--
   <h3>過去の授業</h3>
