type and update stat2

--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -57,7 +57,7 @@
   <h4>教科書</h4>
   
   <ul>
-    <li> 田中隆一. 2015.『<a href="http://www.yuhikaku.co.jp/books/detail/97846411502876" target="_blank">計量経済学の第一歩：実証分析のススメ</a>』有斐閣.</li>
+    <li> 田中隆一. 2015.『<a href="http://www.yuhikaku.co.jp/static/studia_ws/index.html" target="_blank">計量経済学の第一歩：実証分析のススメ</a>』有斐閣.</li>
   </ul>
   
 
