--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -52,10 +52,8 @@
     <ul>
       <li><a href="R/installing-R.html">R とRStudio のインストール</a></li>
   	  <li><a href="R/introduction-to-R.html">R入門</a></li>
-   	  <!-- <li><a href="docs/rm1_assignment01.pdf">課題1</a></li> -->
-      <!--<li>.Rprofileの例：<a href="docs/dot_Rprofile.txt">dot_Rprofile.txt</a>（中身をコピペするか、ファイル名を".Rprofile" に変更して使うこと)</li> -->
-      <!-- <li><a href="https://kobelaw.au1.qualtrics.com/SE/?SID=SV_2fWlJYK3LeizHBX" target="_blank">課題1</a>（締切：4月19日午後9時）</li> -->
-      <!-- <li><a href="slides/stat2-slides-lec01.pdf">講義スライド</a></li> -->
+  	  <li><a href="R/birthday.html">誕生日問題</a></li>
+  	  <!--<li><a href="slides/stat2-slides-02.pdf"> 講義スライド</a><li>-->
     </ul>
     
 <!--
