--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -56,6 +56,12 @@
       <!-- <li><a href="slides/stat2-slides-lec01.pdf">講義スライド</a></li> -->
     </ul>
     
+    <h3>2. Rの基本操作</h3>
+      <ul>
+        <!--<li>今回は講義スライドなし</li> -->
+        <li><a href="R/review-statistics.html">Rによる統計分析の基礎</a></li>
+      </ul>
+    
 <!--
     <h3>2. Rを使った統計分析の基礎</h3>
       <ul>
