--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -50,10 +50,10 @@
     
     <h3>2. Rを使ってみよう</h3>
     <ul>
+      <li><a href="slides/stat2-slides-02.pdf"> 講義スライド</a><li>
       <li><a href="R/installing-R.html">R とRStudio のインストール</a></li>
   	  <li><a href="R/introduction-to-R.html">R入門</a></li>
   	  <li><a href="R/birthday.html">誕生日問題</a></li>
-  	  <!--<li><a href="slides/stat2-slides-02.pdf"> 講義スライド</a><li>-->
     </ul>
     
 <!--
