--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -38,6 +38,7 @@
       <h2>授業</h2>
   
   <h3>今学期（2018年度 第1クォータ）の授業</h3>
+  <h4>高知工科大学</h4>
    <ul>
      <li><a href="stat2/">統計学 2</a></li>
      <li><a href="econometrics2/">計量経済学応用</a></li>
@@ -46,7 +47,8 @@
   <h3>過去の授業</h3>
   -->
   </ul>
-  <h4>他大学</h4>
+  <h3>過去の授業</h3>
+  <!-- <h4>他大学</h4> -->
   <ul>
     <li><a href="/teaching/pubadmin/">Public Administration</a> [2017年冬学期, 2018年冬学期, 国際大学国際関係学研究科]</li>
     <li><a href="/teaching/methodology/">Research Methodology</a> [2017年春学期, 国際大学国際関係学研究科]</li>
