--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -68,13 +68,14 @@
         <li><a href="R/data-handling.html">Rによるデータの扱い</a></li>
       </ul>
    
-   <!--   
+      
     <h3>4. 因果推論入門</h3>
      <ul>
-      <li> <a href="slides/applied-econometrics-slides-04.pdf">講義スライド</a></li>
+    <!--  <li> <a href="slides/applied-econometrics-slides-04.pdf">講義スライド</a></li>
+    -->
+       <li><a href="econom2-assignment01.html">課題1</a>（提出期限：2018年4月26日正午）</li> 
      </ul>
-   -->
-    
+  
 
   <!-- end .content -->
   </div>
