--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -73,7 +73,7 @@
      <ul>
     <!--  <li> <a href="slides/applied-econometrics-slides-04.pdf">講義スライド</a></li>
     -->
-       <li><a href="econom2-assignment01.html">課題1</a>（提出期限：2018年4月26日正午）</li> 
+       <li><a href="R/econom2-assignment01.html">課題1</a>（提出期限：2018年4月26日正午）</li> 
      </ul>
   
 
