--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -41,7 +41,7 @@
     
   
 
-  <h4><a class="black" href="docs/syllabus-stat2_2018-1Q.pdf">シラバス</a></h4>
+  <h4><a class="black" href="docs/syllabus-stat2_2018-1Q.pdf">シラバス（2018-04-19 改訂）</a></h4>
 
      <br>
   
