--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -71,9 +71,8 @@
       
     <h3>4. 因果推論入門</h3>
      <ul>
-    <!--  <li> <a href="slides/applied-econometrics-slides-04.pdf">講義スライド</a></li>
-    -->
-       <li><a href="R/econom2-assignment01.html">課題1</a>（提出期限：2018年4月26日正午）</li> 
+      <li> <a href="slides/applied-econometrics-slides-04.pdf">講義スライド</a></li>
+      <li><a href="R/econom2-assignment01.html">課題1</a>（提出期限：2018年4月26日正午）</li> 
      </ul>
   
 
