update stat2 and econom2

--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -74,7 +74,13 @@
       <li> <a href="slides/applied-econometrics-slides-04.pdf">講義スライド</a></li>
       <li><a href="R/econom2-assignment01.html">課題1</a>（提出期限：2018年4月26日正午）</li> 
      </ul>
-  
+       
+    <h3>5. 単回帰分析</h3>
+       <ul>
+        <!-- <li> <a href="slides/applied-econometrics-slides-05.pdf">講義スライド</a></li> -->
+        <li><a href="R/linear-regression-1.html">単回帰分析</a></li> 
+       </ul>
+
 
   <!-- end .content -->
   </div>
