update stat2 and econom2

--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -77,7 +77,7 @@
        
     <h3>5. 単回帰分析</h3>
        <ul>
-        <!-- <li> <a href="slides/applied-econometrics-slides-05.pdf">講義スライド</a></li> -->
+        <li> <a href="slides/applied-econometrics-slides-05.pdf">講義スライド</a></li>
         <li><a href="R/linear-regression-1.html">単回帰分析</a></li> 
        </ul>
 
