update stat2 and econom2

--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -83,7 +83,7 @@
        
     <h3>6. 重回帰分析</h3>
        <ul>
-       <!-- <li> <a href="slides/applied-econometrics-slides-06.pdf">講義スライド</a></li> -->
+        <li> <a href="slides/applied-econometrics-slides-06.pdf">講義スライド</a></li>
         <li><a href="R/linear-regression-2.html">重回帰分析 (1)</a></li> 
         <li><a href="R/econom2-assignment02.html">課題2</a>（提出期限：2018年5月10日正午）
        </ul>
