--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -76,7 +76,7 @@
     
     <h3>6. 乱数生成と中心極限定理</h3>
     <ul>
-      <!-- <li><a href="slides/stat2-slides-06.pdf">講義スライド</a></li> -->
+      <li><a href="slides/stat2-slides-06.pdf">講義スライド</a></li>
       <li><a href="R/rng-n-clt.html">乱数生成と中心極限定理</a></li>
     </ul>
     
