update stat2 and econom2

--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -80,6 +80,12 @@
       <li><a href="R/rng-n-clt.html">乱数生成と中心極限定理</a></li>
     </ul>
     
+    <h3>7. 母集団と標本</h3>
+    <ul>
+      <!-- <li><a href="slides/stat2-slides-07.pdf">講義スライド</a></li> -->
+      <li><a href="R/pop-n-samples.html">母集団と標本をシミュレーションで理解する</a></li>
+    </ul>
+    
    </div>
   <!-- InstanceEndEditable -->
   <div class="footer">
