--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -82,7 +82,7 @@
     
     <h3>7. 母集団と標本</h3>
     <ul>
-      <!-- <li><a href="slides/stat2-slides-07.pdf">講義スライド</a></li> -->
+      <li><a href="slides/stat2-slides-07.pdf">講義スライド</a></li>
       <li><a href="R/pop-n-samples.html">母集団と標本をシミュレーションで理解する</a></li>
     </ul>
     
