update stat2 and econom2

--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -41,7 +41,7 @@
     
   
 
-  <h4><a class="black" href="docs/syllabus-stat2_2018-1Q.pdf">シラバス（改訂：2018-04-19; 2018-04-25）</a></h4>
+  <h4><a class="black" href="docs/syllabus-stat2_2018-1Q.pdf">シラバス（改訂：2018-04-19; 2018-04-25; 2018-05-07）</a></h4>
 
      <br>
   
