--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -86,7 +86,7 @@
        <ul>
         <li> <a href="slides/applied-econometrics-slides-06.pdf">講義スライド</a></li>
         <li><a href="R/linear-regression-2.html">重回帰分析 (1)</a></li> 
-        <li><a href="R/econom2-assignment02.html">課題2</a>（提出期限：2018年5月10日正午）</li>
+        <li><a href="R/econom2-assignment02.html">課題2</a>（提出期限：2018年5月10日<s>正午</s>授業開始時）</li>
        </ul>
     
     <h3>7. 回帰分析 (3)</h3>
