--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -86,6 +86,12 @@
       <li><a href="R/pop-n-samples.html">母集団と標本をシミュレーションで理解する</a></li>
     </ul>
     
+    <h3>8. 標本平均と母平均 (1)</h3>
+    <ul>
+      <!-- <li><a href="slides/stat2-slides-08.pdf">講義スライド</a></li> -->
+      <li><a href="R/sampling-distribution.html">標本分布を理解する</a></li>
+    </ul>
+    
     <h3>課題の解答例</h3>
     <ul>
       <li><a href="R/stat2-hw01-solutions.html">課題1の解答例</a></li>
