--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -94,6 +94,13 @@
         <li>この回は講義スライドなし</li>
         <li><a href="R/linear-regression-3.html">回帰分析のシミュレーション</a></li> 
        </ul>
+    
+     <h3>8. 回帰分析 (4)</h3>
+       <ul>
+         <!-- <li> <a href="slides/applied-econometrics-slides-08.pdf">講義スライド</a></li> -->
+        <li><a href="R/linear-regression-4.html">回帰分析の結果の提示</a></li> 
+        <li><a href="R/econom2-assignment03.html">課題3</a>（提出期限：2018年5月17日の授業開始時）</li>
+       </ul>
 
 
   <!-- end .content -->
