--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -97,7 +97,7 @@
     
      <h3>8. 回帰分析 (4)</h3>
        <ul>
-         <!-- <li> <a href="slides/applied-econometrics-slides-08.pdf">講義スライド</a></li> -->
+         <li> <a href="slides/applied-econometrics-slides-08.pdf">講義スライド</a></li>
         <li><a href="R/linear-regression-4.html">回帰分析の結果の提示</a></li> 
         <li><a href="R/econom2-assignment03.html">課題3</a>（提出期限：2018年5月17日の授業開始時）</li>
        </ul>
