--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -101,6 +101,12 @@
         <li><a href="R/linear-regression-4.html">回帰分析の結果の提示</a></li> 
         <li><a href="R/econom2-assignment03.html">課題3</a>（提出期限：2018年5月17日の授業開始時）</li>
        </ul>
+       
+    <h3>9. 回帰分析 (5)</h3>
+       <ul>
+         <!-- <li> <a href="slides/applied-econometrics-slides-09.pdf">講義スライド</a></li> -->
+        <li><a href="R/linear-regression-5.html">変数変換</a></li>
+      </ul>
 
 
   <!-- end .content -->
