--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -92,6 +92,14 @@
       <li><a href="R/sampling-distribution.html">標本分布を理解する</a></li>
     </ul>
     
+    <h3>9. 標本平均と母平均 (2)</h3>
+    <ul>
+      <!-- <li><a href="slides/stat2-slides-09.pdf">講義スライド</a></li> -->
+      <li><a href="R/estimating-pop-mean">母平均の推定</a></li>
+    </ul>
+
+    
+    estimating-pop-mean
     <h3>課題の解答例</h3>
     <ul>
       <li><a href="R/stat2-hw01-solutions.html">課題1の解答例</a></li>
