update stat2 and econom2

--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -104,7 +104,7 @@
        
     <h3>9. 回帰分析 (5)</h3>
        <ul>
-         <!-- <li> <a href="slides/applied-econometrics-slides-09.pdf">講義スライド</a></li> -->
+         <li> <a href="slides/applied-econometrics-slides-09.pdf">講義スライド</a></li>
         <li><a href="R/linear-regression-5.html">変数変換</a></li>
       </ul>
 
