--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -94,7 +94,7 @@
     
     <h3>9. 標本平均と母平均 (2)</h3>
     <ul>
-      <!-- <li><a href="slides/stat2-slides-09.pdf">講義スライド</a></li> -->
+      <li><a href="slides/stat2-slides-09.pdf">講義スライド</a></li>
       <li><a href="R/estimating-pop-mean.html">母平均の推定</a></li>
     </ul>
 
