update stat2 and econom2

--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -97,7 +97,7 @@
     
      <h3>8. 回帰分析 (4)</h3>
        <ul>
-         <li> <a href="slides/applied-econometrics-slides-08.pdf">講義スライド</a></li>
+         <li><a href="slides/applied-econometrics-slides-08.pdf">講義スライド</a></li>
         <li><a href="R/linear-regression-4.html">回帰分析の結果の提示</a></li> 
         <li><a href="R/econom2-assignment03.html">課題3</a>（提出期限：2018年5月17日の授業開始時）</li>
        </ul>
@@ -106,6 +106,13 @@
        <ul>
          <li> <a href="slides/applied-econometrics-slides-09.pdf">講義スライド</a></li>
         <li><a href="R/linear-regression-5.html">変数変換</a></li>
+      </ul>
+      
+    <h3>10. 回帰分析 (6)</h3>
+       <ul>
+         <li>この回は講義スライドなし</li>
+        <li><a href="R/linear-regression-6.html">相互作用</a></li>
+        <li><a href="R/econom2-assignment04.html">課題4</a>（提出期限：2018年5月24日の授業開始時）</li>
       </ul>
 
 
