--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -97,6 +97,12 @@
       <li><a href="slides/stat2-slides-09.pdf">講義スライド</a></li>
       <li><a href="R/estimating-pop-mean.html">母平均の推定</a></li>
     </ul>
+    
+    <h3>10. カイ二乗分布と母分散の推定</h3>
+    <ul>
+      <!-- <li><a href="slides/stat2-slides-10.pdf">講義スライド</a></li> -->
+      <li><a href="R/variance-estimation.html">母分散の推定</a></li>
+    </ul>
 
     <h3>課題の解答例</h3>
     <ul>
