--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -108,6 +108,7 @@
     <ul>
       <li><a href="R/stat2-hw01-solutions.html">課題1の解答例</a></li>
       <li><a href="R/stat2-hw02-solutions.html">課題2の解答例</a></li>
+      <li><a href="R/stat2-hw03-solutions.html">課題3の解答例</a></li>
     </ul>
     
    </div>
