--- a/jp/classes/econometrics2/contents/R/econom2-assignment04.html
+++ b/jp/classes/econometrics2/contents/R/econom2-assignment04.html
@@ -403,7 +403,7 @@ $(document).ready(function () {
 
 
 <p><strong>Rを使って</strong>以下の問題に答え、<strong>結果</strong>（分析結果とそれを説明する文章）を印刷して提出しなさい。<strong>提出期限は2018年5月24日（木）の授業開始時</strong>。</p>
-<p>第10回（2018年5月17日）の授業で使った<a href="http://yukiyanai.github.io/jp/quant-methods-stata//data/hr96-09.dta">浅野・矢内（2013）のデータ</a>を使い以下の問いに答えななさい。ただし、いずれの問題についても、必要な変数変換を行うこと。</p>
+<p>第10回（2018年5月17日）の授業で使った<a href="http://yukiyanai.github.io/jp/quant-methods-stata//data/hr96-09.dta">浅野・矢内（2013）のデータ</a>を使い以下の問に答えなさい。ただし、いずれの問題についても、必要な変数変換を行うこと。</p>
 <ol style="list-style-type: decimal">
 <li>2005年総選挙の得票率 (voteshare) を選挙費用 (exp) に回帰するモデルを推定し、結果を解釈しなさい。</li>
 <li>2005年総選挙の得票率を選挙費用 (exp) と自民党 (Liberal Democratic Party; LDP) ダミーに回帰するモデルを推定し、結果を解釈しなさい。</li>
