update stat2 and econom2

--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -103,6 +103,13 @@
       <li><a href="slides/stat2-slides-10.pdf">講義スライド</a></li>
       <li><a href="R/variance-estimation.html">母分散の推定</a></li>
     </ul>
+    
+    <h3>11. <i>t</i> 分布と母平均の推定</h3>
+    <ul>
+      <!-- <li><a href="slides/stat2-slides-11.pdf">講義スライド</a></li> -->
+      <li><a href="R/t-distribution.html"><i>t</i> 分布を利用した母平均の推定</a></li>
+    </ul>
+
 
     <h3>課題の解答例</h3>
     <ul>
