--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -114,6 +114,13 @@
         <li><a href="R/linear-regression-6.html">相互作用</a></li>
         <li><a href="R/econom2-assignment04.html">課題4</a>（提出期限：2018年5月24日の授業開始時）</li>
       </ul>
+      
+     <h3>11. 因果効果の推定とバイアス</h3>
+       <ul>
+        <!-- <li> <a href="slides/applied-econometrics-slides-11.pdf">講義スライド</a></li> -->
+        <li><a href="R/omitted-variable-bias.html">欠落変数バイアス</a></li>
+       </ul>
+
 
 
   <!-- end .content -->
