--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -41,7 +41,7 @@
     
   
 
-  <h4><a class="black" href="docs/syllabus-applied-econometrics_2018-1Q.pdf">シラバス（改訂：2018-04-18; 2018-05-06）</a></h4>
+  <h4><a class="black" href="docs/syllabus-applied-econometrics_2018-1Q.pdf">シラバス（改訂：2018-04-18; 2018-05-06; 2018-05-18）</a></h4>
 
      <br>
   
