update stat2 and econom2

--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -117,7 +117,7 @@
       
      <h3>11. 因果効果の推定とバイアス</h3>
        <ul>
-        <!-- <li> <a href="slides/applied-econometrics-slides-11.pdf">講義スライド</a></li> -->
+        <li> <a href="slides/applied-econometrics-slides-11.pdf">講義スライド</a></li>
         <li><a href="R/omitted-variable-bias.html">欠落変数バイアス</a></li>
        </ul>
 
