--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -106,7 +106,7 @@
     
     <h3>11. <i>t</i> 分布と母平均の推定</h3>
     <ul>
-      <!-- <li><a href="slides/stat2-slides-11.pdf">講義スライド</a></li> -->
+      <li><a href="slides/stat2-slides-11.pdf">講義スライド</a></li>
       <li><a href="R/t-distribution.html"><i>t</i> 分布を利用した母平均の推定</a></li>
     </ul>
 
