update stat2 and econom2

--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -109,6 +109,12 @@
       <li><a href="slides/stat2-slides-11.pdf">講義スライド</a></li>
       <li><a href="R/t-distribution.html"><i>t</i> 分布を利用した母平均の推定</a></li>
     </ul>
+    
+    <h3>12. 平均値の比較</h3>
+    <ul>
+      <!-- <li><a href="slides/stat2-slides-12.pdf">講義スライド</a></li> -->
+      <li><a href="R/mean-comparison.html">統計的検定と平均値の比較</a></li>
+    </ul>
 
 
     <h3>課題の解答例</h3>
