--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -120,6 +120,14 @@
         <li> <a href="slides/applied-econometrics-slides-11.pdf">講義スライド</a></li>
         <li><a href="R/omitted-variable-bias.html">欠落変数バイアス</a></li>
        </ul>
+       
+     <h3>12. 操作変数法</h3>
+       <ul>
+        <!--<li> <a href="slides/applied-econometrics-slides-12.pdf">講義スライド</a></li>-->
+        <li><a href="R/IV-method.html">操作変数法</a></li>
+        <li><a href="R/econom2-assignment05.html">課題5</a>（提出期限：2018年5月31日の授業開始時）</li>
+       </ul>
+
 
 
 
