update stat2 and econom2

--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -112,7 +112,7 @@
     
     <h3>12. 平均値の比較</h3>
     <ul>
-      <!-- <li><a href="slides/stat2-slides-12.pdf">講義スライド</a></li> -->
+      <li><a href="slides/stat2-slides-12.pdf">講義スライド</a></li>
       <li><a href="R/mean-comparison.html">統計的検定と平均値の比較</a></li>
     </ul>
 
@@ -122,6 +122,7 @@
       <li><a href="R/stat2-hw01-solutions.html">課題1の解答例</a></li>
       <li><a href="R/stat2-hw02-solutions.html">課題2の解答例</a></li>
       <li><a href="R/stat2-hw03-solutions.html">課題3の解答例</a></li>
+      <li><a href="R/stat2-hw04-solutions.html">課題4の解答例</a></li>
     </ul>
     
    </div>
