--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -113,6 +113,7 @@
          <li>この回は講義スライドなし</li>
         <li><a href="R/linear-regression-6.html">相互作用</a></li>
         <li><a href="R/econom2-assignment04.html">課題4</a>（提出期限：2018年5月24日の授業開始時）</li>
+        <li><a href="R/assignment04-solutions.pdf">課題4の解答例（PDFファイル）</a></li>
       </ul>
       
      <h3>11. 因果効果の推定とバイアス</h3>
@@ -123,7 +124,7 @@
        
      <h3>12. 操作変数法</h3>
        <ul>
-        <!--<li> <a href="slides/applied-econometrics-slides-12.pdf">講義スライド</a></li>-->
+        <li> <a href="slides/applied-econometrics-slides-12.pdf">講義スライド</a></li>
         <li><a href="R/IV-method.html">操作変数法</a></li>
         <li><a href="R/econom2-assignment05.html">課題5</a>（提出期限：2018年5月31日の授業開始時）</li>
        </ul>
