--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -128,6 +128,12 @@
         <li><a href="R/IV-method.html">操作変数法</a></li>
         <li><a href="R/econom2-assignment05.html">課題5</a>（提出期限：2018年5月31日の授業開始時）</li>
        </ul>
+       
+     <h3>13. ランダム化比較実験</h3>
+       <ul>
+        <!-- <li> <a href="slides/applied-econometrics-slides-13.pdf">講義スライド</a></li> -->
+        <li><a href="R/RCT.html">ランダム化比較実験</a></li>
+       </ul>
 
 
 
