--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -115,6 +115,12 @@
       <li><a href="slides/stat2-slides-12.pdf">講義スライド</a></li>
       <li><a href="R/mean-comparison.html">統計的検定と平均値の比較</a></li>
     </ul>
+    
+    <h3>13. 2変数の関係</h3>
+    <ul>
+      <!-- <li><a href="slides/stat2-slides-13.pdf">講義スライド</a></li> -->
+      <li><a href="R/bivariate-analysis.html">2変数の関係</a></li>
+    </ul>
 
 
     <h3>課題の解答例</h3>
