update stat2 and econom2

--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -131,7 +131,7 @@
        
      <h3>13. ランダム化比較実験</h3>
        <ul>
-        <!-- <li> <a href="slides/applied-econometrics-slides-13.pdf">講義スライド</a></li> -->
+        <li> <a href="slides/applied-econometrics-slides-13.pdf">講義スライド</a></li>
         <li><a href="R/RCT.html">ランダム化比較実験</a></li>
        </ul>
 
