--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -118,8 +118,14 @@
     
     <h3>13. 2変数の関係</h3>
     <ul>
-      <!-- <li><a href="slides/stat2-slides-13.pdf">講義スライド</a></li> -->
+      <li><a href="slides/stat2-slides-13.pdf">講義スライド</a></li>
       <li><a href="R/bivariate-analysis.html">2変数の関係</a></li>
+    </ul>
+    
+    <h3>14. 回帰分析</h3>
+    <ul>
+      <!-- <li><a href="slides/stat2-slides-14.pdf">講義スライド</a></li> -->
+      <li><a href="R/regression.html">回帰分析入門</a></li>
     </ul>
 
 
