--- a/jp/classes/stat2/contents/R/bivariate-analysis.html
+++ b/jp/classes/stat2/contents/R/bivariate-analysis.html
@@ -11,7 +11,6 @@
 
 <meta name="author" content="矢内　勇生" />
 
-<meta name="date" content="2018-05-25" />
 
 <title>統計学2</title>
 
@@ -467,7 +466,7 @@ $(document).ready(function () {
 <h1 class="title toc-ignore">統計学2</h1>
 <h3 class="subtitle"><em>2変数の関係</em></h3>
 <h4 class="author"><em>矢内　勇生</em></h4>
-<h4 class="date"><em>2018-05-25</em></h4>
+<h4 class="date"><em>2018-05-25（訂正：2018-05-28）</em></h4>
 
 </div>
 
@@ -623,7 +622,7 @@ $(document).ready(function () {
 </div>
 <div class="section level2">
 <h2>独立性の検定</h2>
-<p>私たちの標本（データ）では、女性の内閣支持理より、男性の内閣支持率の方が高い。これはたまた得られた結果だろうか。それとも、母集団でも男性の内閣支持率の方が高いと考えられるだろうか。</p>
+<p>私たちの標本（データ）では、女性の内閣支持理より、男性の内閣支持率の方が高い。これはたまたま得られた結果だろうか。それとも、母集団でも男性の内閣支持率の方が高いと考えられるだろうか。</p>
 <p>これを確かめるために、統計的検定を行う。ここで検証する仮説は、以下のものである。</p>
 <ul>
 <li>帰無仮説：性別と内閣支持率は独立である（つまり、男性の内閣支持率 = 女性の内閣支持率）</li>
