--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -134,6 +134,12 @@
         <li> <a href="slides/applied-econometrics-slides-13.pdf">講義スライド</a></li>
         <li><a href="R/RCT.html">ランダム化比較実験</a></li>
        </ul>
+    
+     <h3>14. マッチング</h3>
+       <ul>
+<!--        <li> <a href="slides/applied-econometrics-slides-14.pdf">講義スライド</a></li> -->
+        <li><a href="R/matching.html">マッチング</a></li>
+       </ul>
 
 
 
