update stat2 and econom2

--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -124,7 +124,7 @@
     
     <h3>14. 回帰分析</h3>
     <ul>
-      <!-- <li><a href="slides/stat2-slides-14.pdf">講義スライド</a></li> -->
+      <li><a href="slides/stat2-slides-14.pdf">講義スライド</a></li>
       <li><a href="R/regression.html">回帰分析入門</a></li>
     </ul>
 
@@ -135,6 +135,7 @@
       <li><a href="R/stat2-hw02-solutions.html">課題2の解答例</a></li>
       <li><a href="R/stat2-hw03-solutions.html">課題3の解答例</a></li>
       <li><a href="R/stat2-hw04-solutions.html">課題4の解答例</a></li>
+      <li><a href="R/stat2-hw05-solutions.html">課題5の解答例</a></li>
     </ul>
     
    </div>
