--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -137,7 +137,7 @@
     
      <h3>14. マッチング</h3>
        <ul>
-<!--        <li> <a href="slides/applied-econometrics-slides-14.pdf">講義スライド</a></li> -->
+        <li> <a href="slides/applied-econometrics-slides-14.pdf">講義スライド</a></li>
         <li><a href="R/matching.html">マッチング</a></li>
        </ul>
 
