--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -127,6 +127,11 @@
       <li><a href="slides/stat2-slides-14.pdf">講義スライド</a></li>
       <li><a href="R/regression.html">回帰分析入門</a></li>
     </ul>
+    
+    <h3>15. まとめ</h3>
+    <ul>
+      <li><a href="slides/stat2-slides-15.pdf">講義スライド</a></li>
+    </ul>
 
 
     <h3>課題の解答例</h3>
