--- a/resources/index.html
+++ b/resources/index.html
@@ -37,6 +37,10 @@
    
    <h3>Beamer themes</h3>
    
+   <h4>Kochi University of Technology</h4>
+   <ul>
+     <li><a href="https://github.com/yukiyanai/KUT-Beamer" target="_blank">KUT-Beamer</a> (GitHub)</li>
+   </ul>
    <h4>International University of Japan</h4>
    <ul>
      <li><a href="https://github.com/yukiyanai/IUJ-Beamer" target="_blank">IUJ-Beamer</a> (GitHub)</li>
