--- a/teaching/index.html
+++ b/teaching/index.html
@@ -35,7 +35,7 @@
   <div class="content">
   <h2>Courses</h2>
   
-  <h3>Current (Fall 2017)</h3>
+  <h3>Current (Spring 2018)</h3>
   <ul>
     <li><a href="/jp/classes/stat2/" target="_blank">Statistics 2 (in Japanese)</a></li>
     <li><a href="/jp/classes/econometrics2/" target="_blank">Applied Econometrics (in Japanese)</a></li>
