--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -37,19 +37,30 @@
   <div class="content">
       <h2>授業</h2>
   
-  <h3>今学期（2018年度 第1クォータ）の授業</h3>
+  <h3>今学期（2018年度後期）の授業</h3>
   <h4>高知工科大学</h4>
    <ul>
-     <li><a href="stat2/">統計学 2</a></li>
-     <li><a href="econometrics2/">計量経済学応用</a></li>
+     <li><a href="econometrics1/">計量経済学</a></li>
+     <li>情報科学3</li>
    </ul>
-  <!--
-  <h3>過去の授業</h3>
-  -->
+   
+   <h4>神戸大学（夏期集中）</h4>
+   <ul>
+     <li><li><a href="kobe-cp/">比較政治学 B</a></li></li>
+   </ul>
+   
   </ul>
   <h3>過去の授業</h3>
-  <!-- <h4>他大学</h4> -->
+  
+  <h4>高知工科大学</h4>
   <ul>
+    <li><a href="stat2/">統計学 2</a></li>
+    <li><a href="econometrics2/">計量経済学応用</a></li>
+  </ul>
+  
+  <h4>他大学</h4>
+  <ul>
+    <li>比較政治学 A [2017年夏期集中, 2018年夏期集中, 神戸大学 法学部]</li>
     <li><a href="/teaching/pubadmin/">Public Administration</a> [2017年冬学期, 2018年冬学期, 国際大学国際関係学研究科]</li>
     <li><a href="/teaching/methodology/">Research Methodology</a> [2017年春学期, 国際大学国際関係学研究科]</li>
     <li><a href="/teaching/lgps/">Local Government and Public Services</a> [2017年春学期, 秋学期, 国際大学国際関係学研究科]</li>
@@ -60,8 +71,6 @@
     <li><a href="/teaching/rm3/">Research Methods in Political Science III</a> [2016年度前期, 神戸大学 法学部 / 法学研究科]</li>
     <li><a href="pe1">政治経済学 I （政治経済学）</a> [2014年度後期, 2015年度後期, 2016年度後期, 神戸大学 法学部 / 法学研究科] </li>
     <li><a href="pe2/">政治経済学 II</a> [2015年度前期, 神戸大学 法学部 / 法学研究科] </li>
-    
-    
     <li><a href="pp1/">政治過程論 I</a> [2015年度前期, 甲南大学 法学部]</li>
     <li>政治学英語文献研究（応用） [2014年度前期, 早稲田大学 政治経済学部]</li>
     <li>現代デモクラシー論 A, B [2014年度前期, 拓殖大学 政経学部]</li>
