--- a/jp/classes/kobe-cp/index.html
+++ b/jp/classes/kobe-cp/index.html
@@ -41,7 +41,7 @@
     
   
 
-  <h4><a class="black" href="docs/syllabus-cp-B-2018.pdf">シラバス</a></h4>
+  <h4><a class="black" href="docs/syllabus-cp-B-2018.pdf">シラバス</a> (2018-09-15 改訂)</h4>
 
      <br>
   
