--- a/teaching/index.html
+++ b/teaching/index.html
@@ -35,37 +35,57 @@
   <div class="content">
   <h2>Courses</h2>
   
-  <h3>Current (Spring 2018)</h3>
+  <h3>Current (Fall 2018)</h3>
   <ul>
-    <li><a href="/jp/classes/stat2/" target="_blank">Statistics 2 (in Japanese)</a></li>
-    <li><a href="/jp/classes/econometrics2/" target="_blank">Applied Econometrics (in Japanese)</a></li>
+    <li><a href="/jp/classes/econometrics1/" target="_blank">Econometrics</a> (in Japanese)</li>
+    <li>Information Science III (in Japanese)</li>
   </ul>
-  <!-- <h3>Past</h3>
+  <h3>Past</h3>
   <h4>Kochi University of Technology</h4>
-  -->
-  <h4>Other Universities</h4>
+   <ul>
+    <li><a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u) Spring 2018</li>
+    <li><a href="/jp/classes/econometrics2/" target="_blank">Applied Econometrics</a> (u) Spring 2018</li>
+  </ul>
+  
+  
+  
+  <h4>Kobe University</h4>
   <ul>
-    <li><a href="pubadmin/" target="_blank">Public Administration</a> (g), International Univeristy of Japan (Winter 2017 &amp; 2018)</li>
-    <li><a href="lgps/" target="_blank">Local Government and Public Services</a> (g), International Univeristy of Japan (Spring &amp; Fall 2017)</li>
-    <li><a href="methodology/" target="_blank">Research Methodology</a> (g), International Univeristy of Japan (Spring 2017)</li>
-    <li>Local Government and Public Services (g), International Univeristy of Japan (Spring 2017)</li>
-    <li>Data Visualization and Statistics with Stata (g), International Univeristy of Japan (Winter 2017 &amp; 2018)</li>
-    <li>Comparative Politics A &amp; B (u), Kobe University (Summer 2017)</li>
-    <li><a href="/jp/classes/pe/" target="_blank">Basics of Political Economy</a> (u &amp; g), Kobe University (Fall 2016)</li>
-    <li><a href="/jp/classes/pe1/" target="_blank">Political Economy I</a> (u &amp; g), Kobe University (Fall 2014, Fall 2015) </li>
-    <li><a href="/jp/classes/pe2/" target="_blank">Political Economy II</a> (u &amp; g), Kobe University (Spring 2015)</li>
-    <li><a href="rm1/" target="_blank">Research Methods in Political Science I</a> (u &amp; g) [taught in English], Kobe University (Fall 2015)</li>
-    <li><a href="/jp/classes/rm1/" target="_blank">Research Methods in Political Science I</a> (u &amp; g) [taught in Japanese], Kobe University (Fall 2014, Spring 2016)</li>
-    <li><a href="rm2-2016/" target="_blank">Research Methods in Political Science II</a> (u &amp; g) [taught in English], Kobe University (Fall 2016)</li>
-    <li><a href="/jp/classes/rm2/" target="_blank">Research Methods in Political Science II</a> (u &amp; g) [taught in Japanese], Kobe University (Spring 2015)</li>
-    <li><a href="rm3/" target="_blank">Research Methods in Political Science III</a> (u &amp; g) [taught in English], Kobe University (Spring 2016)</li>
+    <li><a href="/jp/classes/kobe-cp/">Comparative Politics B</a> (u) Summer 2017, Summer 2018</li>
+    <li>Comparative Politics A (u) Summer 2017, Summer 2018</li>
+    <li><a href="/jp/classes/pe/" target="_blank">Basics of Political Economy</a> (u &amp; g) Fall 2016</li>
+    <li><a href="/jp/classes/pe1/" target="_blank">Political Economy I</a> (u &amp; g) Fall 2014, Fall 2015</li>
+    <li><a href="/jp/classes/pe2/" target="_blank">Political Economy II</a> (u &amp; g) Spring 2015</li>
+    <li><a href="rm1/" target="_blank">Research Methods in Political Science I</a> [taught in English]  (u &amp; g) Fall 2015</li>
+    <li><a href="/jp/classes/rm1/" target="_blank">Research Methods in Political Science I</a> [taught in Japanese] (u &amp; g) Fall 2014, Spring 2016</li>
+    <li><a href="rm2-2016/" target="_blank">Research Methods in Political Science II</a> [taught in English] (u &amp; g) Fall 2016</li>
+    <li><a href="/jp/classes/rm2/" target="_blank">Research Methods in Political Science II</a> [taught in Japanese] (u &amp; g) Spring 2015</li>
+    <li><a href="rm3/" target="_blank">Research Methods in Political Science III</a> [taught in English] (u &amp; g) Spring 2016</li>
+  </ul>
+  
+  <h4>International University of Japan</h4>
+  <ul>
+    <li><a href="pubadmin/" target="_blank">Public Administration</a> (g) Winter 2017, Winter 2018</li>
+    <li><a href="lgps/" target="_blank">Local Government and Public Services</a> (g) Spring 2017, Fall 2017</li>
+    <li><a href="methodology/" target="_blank">Research Methodology</a> (g) Spring 2017</li>
+    <li>Data Visualization and Statistics with Stata (g) Winter 2017, Winter 2018</li>
+  </ul>
+  
+  <h4>Takushoku University</h4>
+  <ul>
+    <li>Theories of Modern Democracy A, B (u) Spring 2014</li>
+    <li>Principles of Political Science I, II (u) 2013, 2014</li>
+    <li>Quantitative Methods in Political Science (u) Spring 2012, Fall 2012, Spring 2013, Fall 2013</li>
+    <li>Introduction to Statistics (u) Spring 2012, Fall 2012, Spring 2013, Fall 2013</li>
+  </ul>
+  
+    
+  <h4>Other Universities</h4>
+  <ul>  
     <li><a href="/jp/classes/pp1/" target="_blank">Political Process I</a> (u), Konan University (Spring 2015)</li>
     <li>English Readings in Political Science (u), Waseda University (Spring 2014)</li>
-    <li>Theories of Modern Democracy A, B (u), Takushoku University (Spring 2014)</li>
-    <li>Principles of Political Science I, II (u), Takushoku University (2013, 2014)</li>
-    <li>Quantitative Methods in Political Science (u), Takushoku University (Spring 2012, Fall 2012, Spring 2013, Fall 2013)</li>
-    <li>Introduction to Statistics (u), Takushoku University (Spring 2012, Fall 2012, Spring 2013, Fall 2013)</li>
   </ul>
+  
   <div align="right">u=undergraduate; g=graduate&nbsp;&nbsp;&nbsp;</div>
   <!-- end .content -->
   </div>
