--- a/jp/classes/kobe-cp/contents/index.html
+++ b/jp/classes/kobe-cp/contents/index.html
@@ -46,6 +46,8 @@
     <ul>
       <li><a href="R/installing-R.html">R とRStudio のインストール</a></li>
   	  <li><a href="R/introduction-to-R.html">R入門</a></li>
+  	  <li><a href="R/review-statistics.html">Rによる統計分析の基礎</a></li>
+  	  <li><a href="R/data-loading.html">Rによるデータの読み込み</a></li>
    	  <!-- <li><a href="docs/rm1_assignment01.pdf">課題1</a></li> -->
       <li>.Rprofileの例：<a href="docs/dot_Rprofile.txt">dot_Rprofile.txt</a>（中身をコピペするか、ファイル名を".Rprofile" に変更して使うこと)</li>
       <!--<li><a href="https://kobelaw.au1.qualtrics.com/SE/?SID=SV_2fWlJYK3LeizHBX" target="_blank">課題1</a>（締切：9月19日午後10時）</li>-->
