--- a/jp/classes/kobe-cp/contents/index.html
+++ b/jp/classes/kobe-cp/contents/index.html
@@ -56,7 +56,17 @@
     <h3>第2日：比較政治学における因果推論</h3>
     <ul>
       <li><a href="R/causality.html">因果推論</a></li>
+      <li>おまけ：<a href="/jp/classes/econometrics2/contents/R/RCT.html">ランダム化比較実験 (RCTs)</a></li>
+      <li><a href="slides/kobe-cpB-02.pdf">講義スライド</a></li>
       <li><a href="R/cpb-assignment1.html">課題1</a></li>
+    </ul>
+
+    <h3>第3日：比較政治学における測定</h3>
+    <ul>
+      <li><a href="R/tables-n-figures.html">図表の作成</a></li>
+      <li><a href="R/measurement.html">測定</a></li>
+      <!-- <li><a href="slides/kobe-cpB-03.pdf">講義スライド</a></li> 
+      <li><a href="R/cpb-assignment2.html">課題2</a></li> -->
     </ul>
     
      <h3>最終課題</h3>
