--- a/jp/classes/kobe-cp/contents/index.html
+++ b/jp/classes/kobe-cp/contents/index.html
@@ -65,8 +65,14 @@
     <ul>
       <li><a href="R/tables-n-figures.html">図表の作成</a></li>
       <li><a href="R/measurement.html">測定</a></li>
-      <!-- <li><a href="slides/kobe-cpB-03.pdf">講義スライド</a></li> 
-      <li><a href="R/cpb-assignment2.html">課題2</a></li> -->
+      <!-- <li><a href="slides/kobe-cpB-03.pdf">講義スライド</a></li> -->
+      <li><a href="R/cpb-assignment2.html">課題2</a></li>
+    </ul>
+    
+    <h3>第4日：比較政治学における予測</h3>
+    <ul>
+       <li><a href="R/prediction.html">予測</a></li>
+      <!-- <li><a href="slides/kobe-cpB-03.pdf">講義スライド</a></li>  -->
     </ul>
     
      <h3>最終課題</h3>
