--- a/jp/classes/kobe-cp/contents/index.html
+++ b/jp/classes/kobe-cp/contents/index.html
@@ -71,6 +71,7 @@
     
     <h3>第4日：比較政治学における予測</h3>
     <ul>
+       <li><a href="R/intro-to-regression.html">回帰分析入門</a></li>
        <li><a href="R/prediction.html">予測</a></li>
       <!-- <li><a href="slides/kobe-cpB-03.pdf">講義スライド</a></li>  -->
     </ul>
