--- a/jp/classes/kobe-cp/contents/index.html
+++ b/jp/classes/kobe-cp/contents/index.html
@@ -59,6 +59,7 @@
       <li>おまけ：<a href="/jp/classes/econometrics2/contents/R/RCT.html">ランダム化比較実験 (RCTs)</a></li>
       <li><a href="slides/kobe-cpB-02.pdf">講義スライド</a></li>
       <li><a href="R/cpb-assignment1.html">課題1</a></li>
+      <li><a href="R/cpb-assignment1-answers.html">課題1の解答例</a></li>
     </ul>
 
     <h3>第3日：比較政治学における測定</h3>
