--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -41,7 +41,7 @@
   <h4>高知工科大学</h4>
    <ul>
      <li><a href="econometrics1/">計量経済学</a></li>
-     <li>情報科学3</li>
+     <li><a href="info3">情報科学3</a></li>
    </ul>
    
    <h4>神戸大学（夏期集中）</h4>
