--- a/jp/classes/info3/index.html
+++ b/jp/classes/info3/index.html
@@ -45,8 +45,10 @@
   
   <br>
   
-  <h3>資料・授業に役立つリンク</h3>
+  <h3>授業に役立つリンク</h3>
   <ul>
+    <li><a href="https://py3.codeskulptor.org/" target="_blank">CodeSkulptor3</a>（ウェブ上でPython 3プログラムを実行できる）</li>
+    <li>Dive into Python 3（<a href="http://www.diveintopython3.net/" target="_blank">英語版</a>; <a href="http://diveintopython3-ja.rdy.jp/" target="_blank">日本語版</a>）</li>
     <li><a href="https://scratch-howto.com/" target="_blank">スクラッチプログラミング入門</a></li>
   </ul>
   
