--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -47,7 +47,20 @@
     <h3>1. イントロダクション</h3>
     <ul>
       <li><a href="slides/econometrics-slides-01.pdf">講義スライド (PDF)</a></li>
-      <li><a href="http://yukiyanai.github.io/jp/classes/kobe-cp/contents/R/installing-R.html" target="_blank">RとRStudioのインストール</a></li>
+      <li><a href="/jp/classes/kobe-cp/contents/R/installing-R.html" target="_blank">RとRStudioのインストール</a></li>
+    </ul>
+    
+    <h3>1. RとRStudioの基本操作</h3>
+    <ul>
+      <!-- <li><a href="slides/econometrics-slides-01.pdf">講義スライド (PDF)</a></li> -->
+      <li><a href="R/introduction-to-R.html" target="_blank">Rの基本操作</a></li>
+      <li><a href="R/r-markdown.html" target="_blank">Rマークダウン入門</a>
+        <ul>
+          <li></li>
+          <li>Rマークダウン入門のRmdファイル (<a href="R/r-markdown.Rmd">r-markdown.Rmd</a>)</li>
+          <li>スタイルシート (<a href="R/my-markdown.css">my-markdown.css</a>)</li>
+        </ul>
+      </li>
     </ul>
 
 
