--- a/teaching/index.html
+++ b/teaching/index.html
@@ -38,7 +38,7 @@
   <h3>Current (Fall 2018)</h3>
   <ul>
     <li><a href="/jp/classes/econometrics1/" target="_blank">Econometrics</a> (in Japanese)</li>
-    <li>Information Science III (in Japanese)</li>
+    <li><a href="/jp/classes/info3/" target="_blank">Information Science III</a> (in Japanese)</li>
   </ul>
   <h3>Past</h3>
   <h4>Kochi University of Technology</h4>
