--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -43,13 +43,7 @@
      <li><a href="econometrics1/">計量経済学</a></li>
      <li><a href="info3">情報科学3</a></li>
    </ul>
-   
-   <h4>神戸大学（夏期集中）</h4>
-   <ul>
-     <li><li><a href="kobe-cp/">比較政治学 B</a></li></li>
-   </ul>
-   
-  </ul>
+
   <h3>過去の授業</h3>
   
   <h4>高知工科大学</h4>
@@ -60,6 +54,7 @@
   
   <h4>他大学</h4>
   <ul>
+    <li><a href="kobe-cp/">比較政治学 B</a> [2017年夏期集中, 2018年夏期集中, 神戸大学 法学部]</li>
     <li>比較政治学 A [2017年夏期集中, 2018年夏期集中, 神戸大学 法学部]</li>
     <li><a href="/teaching/pubadmin/">Public Administration</a> [2017年冬学期, 2018年冬学期, 国際大学国際関係学研究科]</li>
     <li><a href="/teaching/methodology/">Research Methodology</a> [2017年春学期, 国際大学国際関係学研究科]</li>
