--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -53,8 +53,8 @@
     <h3>2. RとRStudioの基本操作</h3>
     <ul>
       <!-- <li><a href="slides/econometrics-slides-01.pdf">講義スライド (PDF)</a></li> -->
-      <li><a href="R/introduction-to-R.html" target="_blank">Rの基本操作</a></li>
-      <li><a href="R/r-markdown.html" target="_blank">Rマークダウン入門</a>
+      <li><a href="R/introduction-to-R.html">Rの基本操作</a></li>
+      <li><a href="R/r-markdown.html">Rマークダウン入門</a>
         <ul>
           <li></li>
           <li>Rマークダウン入門のRmdファイル (<a href="R/r-markdown.Rmd">r-markdown.Rmd</a>)</li>
