--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -52,8 +52,8 @@
     
     <h3>2. RとRStudioの基本操作</h3>
     <ul>
-      <!-- <li><a href="slides/econometrics-slides-01.pdf">講義スライド (PDF)</a></li> -->
-      <li><a href="R/introduction-to-R.html">Rの基本操作</a></li>
+      <li><a href="slides/econometrics-slides-02.pdf">講義スライド (PDF)</a></li>
+      <li><a href="R/introduction-to-R.html">Rの基本操作</a>（改訂: 2018-10-05）</li>
       <li><a href="R/r-markdown.html">Rマークダウン入門</a>
         <ul>
           <li></li>
