--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -62,6 +62,12 @@
         </ul>
       </li>
     </ul>
+    
+    <h3>3. 因果推論 I</h3>
+    <ul>
+      <!-- <li><a href="slides/econometrics-slides-03.pdf">講義スライド (PDF)</a></li> -->
+      <li><a href="assignments/econometrics-2018-hw01.html">課題1</a>（提出期限：10月16日の授業開始時）</li>
+    </ul>
 
 
 
