update inofo3 and econome1

--- a/jp/classes/info3/index.html
+++ b/jp/classes/info3/index.html
@@ -45,6 +45,12 @@
   
   <br>
   
+  <h3>Pythonのインストール</h3>
+  <ul>
+    <li><a href="python/install-python3.html" target="_blank">Windowsにインストールする方法</a></li>
+  </ul>
+  
+    
   <h3>授業に役立つリンク</h3>
   <ul>
     <li><a href="https://py3.codeskulptor.org/" target="_blank">CodeSkulptor3</a>（ウェブ上でPython 3プログラムを実行できる）</li>
