--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -68,6 +68,11 @@
       <li><a href="slides/econometrics-slides-03.pdf">講義スライド (PDF)</a></li>
       <li><a href="assignments/econometrics-2018-hw01.html">課題1</a>（提出期限：10月16日の授業開始時）</li>
     </ul>
+    
+    <h3>4. 因果推論 II</h3>
+    <ul>
+      <li><a href="slides/econometrics-slides-04.pdf">講義スライド (PDF)</a></li>
+    </ul>
 
 
 
