--- a/research/abstracts/playing-is-believing.html
+++ b/research/abstracts/playing-is-believing.html
@@ -41,7 +41,7 @@
   and
   <a class="black" href="http://yukiyanai.com" target="_blank">Yuki Yanai</a>
   <br><br>
-  <em>Japanese Political Science Review</em>, vol.4: pp.xx-xx. (Forthcoming)<br><br>
+  <em>Japanese Political Science Review</em>, vol.4: pp.117-143. (2018)<br><br>
   </p>
   
   
