--- a/research/index.html
+++ b/research/index.html
@@ -36,7 +36,7 @@
       <h3>Journal Articles</h3>
       <ul> 
         <li>Playing Is Believing. Teaching How Electoral Systems Change Political Outcomes Using a Role-Playing Simulation Game (with  <a href="https://soheishigemura.com/" target="_blank">Sohei Shigemura</a>, <a href="http://www.jaysong.net/" target="_blank">Jaehyun Song</a>, and Keisuke Tani).
-        <a class="booktitle" href="http://www.jpsa-web.org/eibun_zassi/political-science-journal-en.html" targett="_blank">Japanese Political Science Review</a> 4 (Forthcoming) [<a class="abst" href="abstracts/playing-is-believing.html" target="_blank">Abstract</a>]
+        <a class="booktitle" href="http://www.jpsa-web.org/eibun_zassi/political-science-journal4-en.html" targett="_blank">Japanese Political Science Review</a> 4: 117-143 (Oct. 2018) [<a class="abst" href="abstracts/playing-is-believing.html" target="_blank">Abstract</a>]
         </li>
         
         <li> Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet (with <a href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a>). <a class="booktitle" href="http://www.jaesnet.org/research/publications/index.html" target="_blank">Japanese Journal of Electoral Studies</a> 30(2): 60-74 (Dec. 2014)  [<a class="abst" href="abstracts/bicameralism-parliamentarism.html" target="_blank">Abstract</a>]</li>
