--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -73,6 +73,12 @@
     <ul>
       <li><a href="slides/econometrics-slides-04.pdf">講義スライド (PDF)</a></li>
     </ul>
+    
+     <h3>5. 因果推論のための記述統計</h3>
+    <ul>
+      <li><a href="R/causality.html">Rを使った基本的な因果推論</a></li>
+      <li><a href="assignments/econometrics-2018-hw02.html">課題2</a>（提出期限：10月30日の授業開始時）</li>
+    </ul>
 
 
 
