--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -40,7 +40,7 @@
   <h3>論文</h3>
   <ul> 
         <li>Playing Is Believing. Teaching How Electoral Systems Change Political Outcomes Using a Role-Playing Simulation Game (<a href="https://soheishigemura.com/" target="_blank">重村壮平</a> 氏, <a href="http://www.jaysong.net/" target="_blank">宋財泫</a> 氏, 谷圭祐 氏と共著).
-        <a class="booktitle" href="http://www.jpsa-web.org/eibun_zassi/political-science-journal-en.html" targett="_blank">Japanese Political Science Review</a> 4 (近刊) [<a class="abst" href="/research/abstracts/playing-is-believing.html" target="_blank">要旨</a>]
+        <a class="booktitle" href="http://www.jpsa-web.org/eibun_zassi/political-science-journal-en.html" targett="_blank">Japanese Political Science Review</a> 4: 117-143 (2018) [<a class="abst" href="/research/abstracts/playing-is-believing.html" target="_blank">要旨</a>]
         </li>
   
         <li> Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet (<a href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> 氏と共著).『選挙研究』30(2): 60-74 (2014)  [<a class="abst" href="abstracts/bicameralism-parliamentarism.html" target="_blank">要旨</a>]</li>
